--- a/sgfv/composer.json
+++ b/sgfv/composer.json
@@ -19,12 +19,13 @@
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Domain\\": "Domain/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "Tests\\": "tests/"            
         }
     },
     "scripts": {
